[tool.poetry]
name = "langpredict"
version = "0.0.1"
description = "LLMs UI for data exploration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.9"
streamlit = "1.21.0"
langchain = "0.0.123"
streamlit-chat = "^0.0.2.2"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
